--- a/backend/package.json
+++ b/backend/package.json
@@ -8,15 +8,27 @@
   "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.ts"
+  },
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
   },
   "dependencies": {
     "axios": "^1.10.0",
-    "dotenv": "^16.5.0",
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^16.6.0",
     "express": "^5.1.0",
-    "mongoose": "^8.16.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.1",
     "nodemon": "^3.1.10",
     "socket.io": "^4.8.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10"
   }
 }
