--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,6 @@
 JWT_SECRET = OogaWoogaBooga69
 MONGO_URI = mongodb+srv://Tushar:1kRDTD26YZu5yIoA@cluster0.oy9be.mongodb.net/COC?retryWrites=true&w=majority&appName=Cluster0
+REDIS_PASSWORD= hyEFAfwmjRKXlUyGy7RyqLUNjYONErcM
+REDIS_PORT = 17094
+REDIS_HOST = redis-17094.c267.us-east-1-4.ec2.redns.redis-cloud.com
+REDIS_TLS = true
