--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.6.0",
     "express": "^5.1.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "nodemon": "^3.1.10",
